# nonlinear-nn-agent

./: .gitignore  README.md  action-plan.md  agent.py  pyproject.toml  requirements.txt
configs/: agent-dry-run-001.yaml
configs/model-search/: linear-complexmp-direct-adam-600-lr3e3.yaml  lstsq-complexmp-o12-m150.yaml  mlp32-complexmp-direct-adam-400-lr2e3.yaml  mlp32-silu-adam-240-lr8e4.yaml  mlp32-silu-residual-adam-240-lr8e4.yaml  mlp48-silu-adam-240-lr8e4.yaml  mlp48-silu-residual-adam-240-lr8e4.yaml  mlp64-complexmp-direct-adam-400-lr2e3.yaml  mlp64-silu-adam-240-lr8e4.yaml  mlp64-silu-residual-adam-240-lr8e4.yaml  mlp64-tanh-adam-240-lr8e4.yaml
docs/: experiment-comparison.md  github-project-summary.md  model-search-results.csv  model-search-summary.md
docs/case-studies/: deepseek-planner-self-correction.md
docs/diagnostics/: agent-runtime-dashboard.html  agent-runtime-dashboard.md
docs/experiments/: deepseek-run-2026-07-22-target-41db.md
docs/handoff/: deepseek-continuation-plan.md
docs/interview/: agent-harness-qa.md
docs/learning/: experiment-agent-harness-v0.1.md  experiment-agent-harness-v0.2.md  (+14 more)
plans/: agent-dry-run-001.md
tests/: test_agent_workflow.py  test_benchmark.py  test_cli.py  test_context_memory.py  test_dashboard.py  test_diagnostics.py  test_experiment_comparison.py  test_experiment_core.py  test_experiment_tools.py  test_harness_runtime.py  test_llm_planner.py  test_mcp_server.py  test_package_imports.py  test_planner_validation.py  test_reflection.py  test_replay.py  test_runtime_hardening.py  test_server_streaming.py
(+47 files in other folders)
