[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nonlinear-nn-agent"
version = "1.5.0"
description = "LLM-driven Agent Harness Runtime for nonlinear-system modeling experiments."
requires-python = ">=3.9"
dependencies = [
  "matplotlib",
  "numpy",
  "pyyaml",
  "scipy",
  "torch",
  "fastapi",
  "uvicorn",
]

[project.scripts]
nonlinear-agent = "nonlinear_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
